photoapp/svc-photoapp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: photoapp-service
  name: photoapp-service
  namespace: photoapp 
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: photoapp
